--- a/sass/_partials/_sticky_header.scss
+++ b/sass/_partials/_sticky_header.scss
@@ -43,7 +43,7 @@
   padding-top:20px;
   padding-bottom:20px;
   img{
-    width:20%;
+    width:15%;
     max-width:300px;
     height:auto;
     display:block;
@@ -77,14 +77,13 @@ a.signup{
   text-align: center;
   color: #fff;
   text-decoration: none;
-  
   right: 2%;
   line-height: 30px;
   text-transform: uppercase;
-  text-align: left;
+  text-align: RIGHT;
   font-size:0.75em;
   padding: 0em 1.0em;
-  margin-top: 1%;
+  margin-top: 0.4%;
   &:hover{
     background-color: rgba(255, 255, 255, 0.5);
   }
