--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -425,7 +425,7 @@ picture {
 }
 /* line 45, ../sass/_partials/_sticky_header.scss */
 .header img {
-  width: 20%;
+  width: 15%;
   max-width: 300px;
   height: auto;
   display: block;
@@ -468,12 +468,12 @@ a.signup {
   right: 2%;
   line-height: 30px;
   text-transform: uppercase;
-  text-align: left;
+  text-align: RIGHT;
   font-size: 0.75em;
   padding: 0em 1.0em;
-  margin-top: 1%;
+  margin-top: 0.4%;
 }
-/* line 88, ../sass/_partials/_sticky_header.scss */
+/* line 87, ../sass/_partials/_sticky_header.scss */
 a.signup:hover {
   background-color: rgba(255, 255, 255, 0.5);
 }
@@ -760,7 +760,7 @@ Modules - reusable parts of our design
   position: relative;
   border-bottom: 1px solid #878787;
   text-align: center;
-  padding-bottom: 6.0em;
+  padding-bottom: 12.0em;
 }
 /* line 19, ../sass/_partials/_copy-block.scss */
 .content-stripe:last-child {
@@ -783,7 +783,7 @@ Modules - reusable parts of our design
   font-family: "proxima-nova", sans-serif;
   font-size: 1.75em;
   text-transform: uppercase;
-  margin: 3.0em 0;
+  margin: 6.0em 0 3.0em;
   font-weight: 300;
   color: #404040;
   position: relative;
@@ -929,27 +929,28 @@ Modules - reusable parts of our design
 }
 
 /* line 150, ../sass/_partials/_copy-block.scss */
-#block_4 {
+#block_5 {
   padding-bottom: 0 !important;
+  padding-top: 6.0em;
 }
-/* line 152, ../sass/_partials/_copy-block.scss */
-#block_4 img {
+/* line 153, ../sass/_partials/_copy-block.scss */
+#block_5 img {
   margin-bottom: 0 !important;
 }
 
-/* line 157, ../sass/_partials/_copy-block.scss */
+/* line 158, ../sass/_partials/_copy-block.scss */
 .line-block {
   width: 33.333%;
   float: left;
   display: block;
 }
-/* line 161, ../sass/_partials/_copy-block.scss */
+/* line 162, ../sass/_partials/_copy-block.scss */
 .line-block img {
   display: block;
   width: 100%;
   height: auto;
 }
-/* line 166, ../sass/_partials/_copy-block.scss */
+/* line 167, ../sass/_partials/_copy-block.scss */
 .line-block p.line-block-descript {
   display: block;
   width: 100%;
@@ -958,14 +959,14 @@ Modules - reusable parts of our design
   padding: 1.5em;
 }
 @media screen and (max-width: 979px) {
-  /* line 157, ../sass/_partials/_copy-block.scss */
+  /* line 158, ../sass/_partials/_copy-block.scss */
   .line-block {
     width: 100%;
     border-bottom: 10px solid #333;
   }
 }
 
-/* line 180, ../sass/_partials/_copy-block.scss */
+/* line 181, ../sass/_partials/_copy-block.scss */
 #block_horz {
   border-top: 15px solid #666;
   border-bottom: 15px solid #444;
@@ -980,19 +981,19 @@ Modules - reusable parts of our design
   display: table;
 }
 
-/* line 189, ../sass/_partials/_copy-block.scss */
+/* line 190, ../sass/_partials/_copy-block.scss */
 .horz_img {
   width: 33.3%;
   float: left;
 }
-/* line 192, ../sass/_partials/_copy-block.scss */
+/* line 193, ../sass/_partials/_copy-block.scss */
 .horz_img img {
   width: 100%;
   height: auto;
   display: block;
 }
 
-/* line 198, ../sass/_partials/_copy-block.scss */
+/* line 199, ../sass/_partials/_copy-block.scss */
 #mailchimp {
   width: 100%;
   display: block;
@@ -1004,14 +1005,14 @@ Modules - reusable parts of our design
   display: table;
 }
 
-/* line 204, ../sass/_partials/_copy-block.scss */
+/* line 205, ../sass/_partials/_copy-block.scss */
 #mc_embed_signup {
   display: block;
   width: 50%;
   margin-left: auto;
   margin-right: auto;
 }
-/* line 209, ../sass/_partials/_copy-block.scss */
+/* line 210, ../sass/_partials/_copy-block.scss */
 #mc_embed_signup h2 {
   text-align: center;
   font-weight: 300 !important;
@@ -1020,7 +1021,7 @@ Modules - reusable parts of our design
   font-family: "proxima-nova", sans-serif;
 }
 @media screen and (max-width: 979px) {
-  /* line 204, ../sass/_partials/_copy-block.scss */
+  /* line 205, ../sass/_partials/_copy-block.scss */
   #mc_embed_signup {
     width: 80%;
   }
